# musk_vs_trump-ed725

./: .gitignore  DEPLOYMENT.md  README.md  WORKFLOWS.md  demo-integration.sh  index.html  package.json  project_structure.txt  pyproject.toml  validate-workflows.sh  vite.config.js
.github/: copilot-instructions.md
.github/workflows/: backend-health.yml  ci.yml  deploy-pages.yml  deploy.yml  pages.yml
backend/: Makefile  app.py  db_manager.py  requirements.txt  start_backend.sh
docs/: README.md  _config.yml  app.js  index.html
frontend/: README.md
public/: 404.html
scripts/: README.md  check-github-pages.js
src/: App.jsx
src/components/: MobileDeployButton.jsx
