[tool.poetry]
name = "musk_vs_trump"
version = "0.1.0"
description = "Backend for musk_vs_trump"
authors = ["hannesmitterer <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
flask = "2.3.3"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"