[tool.poetry]
name = "musk_vs_trump_backend"
version = "0.1.0"
description = "Backend for musk_vs_trump Flask app"
authors = ["hannesmitterer <your-email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
flask = "2.3.3"
requests = "2.31.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"